# ragnarok-bro-api

./: .env  .gitignore  README.md  app.db  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
app/: config.py  crud.py  main.py  models.py  routes.py  schemas.py  sql_app.db
app/alembic/: env.py
app/alembic/versions/: 06d07f4303d8_add_slots.py  07b518539437_add_weapons.py  07b518539437_weapons.py  0d0d9337be00_add_img_url_to_monsters.py  1740e8e4c56c_add_items_and_monsters.py  1740e8e4c56c_items_and_monsters.py  2d9097bc6c53_add_drop_to_monsters.py  366d34859af5_add_equipments.py
app/tests/: test_equipments.py  test_items.py  test_monsters.py  test_setup.py  test_slots.py  test_weapons.py
sql_app/: database.py  models.py
web_scraping/: equipment.py  item.py  items.py  main.py  monster.py  slot.py  weapon.py
